--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,14 @@
             <artifactId>selenium-java</artifactId>
             <version>4.1.3</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.22</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
