--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,12 @@
             <version>1.18.22</version>
             <scope>provided</scope>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.1.1</version>
+        </dependency>
     </dependencies>
 
 </project>
