Added retryAttempt in config to set Yes Or No, for RetryAnalyzer input

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,9 +1,12 @@
 url = https://opensource-demo.orangehrmlive.com/
 
 # screenshot to be set as yes, no; based on the value it will attach the screenshots in the extent reports for various status
-screenshotonpass=no
+screenshotonpass=yes
 screenshotonfail=yes
 screenshotonskip=no
 
 # if yes, only single extent report will be present, if no a folder will be created with date-time stamp each time a run happens
 overridereports=yes
+
+# retry for failed test cases on yes, on no it wouldn't not go for retry
+retryfailedtest=no
