Added Runmode, Browser and HubURL to the config file

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -10,3 +10,12 @@ overridereports=yes
 
 # retry for failed test cases on yes, on no it wouldn't not go for retry
 retryfailedtest=no
+
+#runmode - local or remote, local will run the tests in local system, remote will run the tests in remote server such as Docker setup
+runmode=local
+
+# browser to be set, chrome or firefox
+browser=chrome
+
+#seleniumgrid url
+huburl = http://localhost:4444/wd/hub
