Made runmode to remote for CI/CD pipelines

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -12,7 +12,7 @@ overridereports=yes
 retryfailedtest=no
 
 #runmode - local or remote, local will run the tests in local system, remote will run the tests in remote server such as Docker setup
-runmode=local
+runmode=remote
 
 # browser to be set, chrome or firefox
 browser=chrome
