Added key, writetoelk to check if elasticsearch & kibana is required
On YES, the document will be deleted/written to collection, on NO the step will be ignored

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,21 +1,24 @@
 url = https://opensource-demo.orangehrmlive.com/
 
-# screenshot to be set as yes, no; based on the value it will attach the screenshots in the extent reports for various status
+#accepted value: [yes, no], on yes will attach the screenshots in the extent reports for respective status
 screenshotonpass=yes
 screenshotonfail=yes
 screenshotonskip=no
 
-# if yes, only single extent report will be present, if no a folder will be created with date-time stamp each time a run happens
+#accepted value: [yes, no], if yes, only single extent report will be present, if no a folder will be created with date-time stamp each time a run happens
 overridereports=yes
 
-# retry for failed test cases on yes, on no it wouldn't not go for retry
+#accepted value: [yes, no], retry for failed test cases on yes, on no it wouldn't not go for retry
 retryfailedtest=no
 
-#runmode - local or remote, local will run the tests in local system, remote will run the tests in remote server such as Docker setup
-runmode=remote
+#accepted value: [local, remote], local will run the tests in local system, remote will run the tests in remote server such as Docker setup
+runmode=local
 
-# browser to be set, chrome or firefox
+#accepted value: [chrome, firefox], browser initialization will be based on the set value
 browser=chrome
 
 #seleniumgrid url
 huburl = http://localhost:4444/wd/hub
+
+#accepted value: [yes, no], yes to write entries to elasticsearch, no for ignoring the method
+writetoekl = yes
