Set writetoelk as no

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -21,4 +21,4 @@ browser=chrome
 huburl = http://localhost:4444/wd/hub
 
 #accepted value: [yes, no], yes to write entries to elasticsearch, no for ignoring the method
-writetoekl = yes
+writetoekl = no
