Updated screenshot for PASS scenarios as NO

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,7 +1,7 @@
 url = https://opensource-demo.orangehrmlive.com/
 
 #accepted value: [yes, no], on yes will attach the screenshots in the extent reports for respective status
-screenshotonpass=yes
+screenshotonpass=no
 screenshotonfail=yes
 screenshotonskip=no
 
