Added key,screenrecording to check if video recording is required or not

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -22,3 +22,6 @@ huburl = http://localhost:4444/wd/hub
 
 #accepted value: [yes, no], yes to write entries to elasticsearch, no for ignoring the method
 writetoekl = no
+
+#accepted value: [yes, no], yes to record the tests and save it, no for ignoring the method
+screenrecording = yes
