Added log4jloggingrequired key to check if log4j logs is required or not

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -24,4 +24,8 @@ huburl = http://localhost:4444/wd/hub
 writetoekl = no
 
 #accepted value: [yes, no], yes to record the tests and save it, no for ignoring the method
-screenrecording = yes
+#the value should always be no for parallel runs (using testNG xmls, maven run, etc), as it will throw Null Pointer Exception
+screenrecording = no
+
+#accepted value: [yes, no], yes to write Log4j logs and save to the specified directory, no for ignoring the Log4j steps and to have only ExtentReport logging
+log4jloggingrequired = yes
