--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,31 +1,22 @@
-url = https://opensource-demo.orangehrmlive.com/
-
+url=https://opensource-demo.orangehrmlive.com/
 #accepted value: [yes, no], on yes will attach the screenshots in the extent reports for respective status
 screenshotonpass=no
 screenshotonfail=yes
 screenshotonskip=no
-
 #accepted value: [yes, no], if yes, only single extent report will be present, if no a folder will be created with date-time stamp each time a run happens
 overridereports=yes
-
 #accepted value: [yes, no], retry for failed test cases on yes, on no it wouldn't not go for retry
 retryfailedtest=no
-
 #accepted value: [local, remote], local will run the tests in local system, remote will run the tests in remote server such as Docker setup
 runmode=local
-
 #accepted value: [chrome, firefox], browser initialization will be based on the set value
 browser=chrome
-
 #seleniumgrid url
-huburl = http://localhost:4444/wd/hub
-
+huburl=http://localhost:4444/wd/hub
 #accepted value: [yes, no], yes to write entries to elasticsearch, no for ignoring the method
-writetoekl = no
-
+writetoekl=no
 #accepted value: [yes, no], yes to record the tests and save it, no for ignoring the method
 #the value should always be no for parallel runs (using testNG xmls, maven run, etc), as it will throw Null Pointer Exception
-screenrecording = no
-
+screenrecording=no
 #accepted value: [yes, no], yes to write Log4j logs and save to the specified directory, no for ignoring the Log4j steps and to have only ExtentReport logging
-log4jloggingrequired = yes
+log4jloggingrequired=yes
